feat: Refine UI and content for NPSI portal
This commit introduces several improvements to the N.P.S.I portal:

- **UI Enhancements:**
    - Updated gradient colors in the header for a more refined aesthetic.
    - Adjusted card styles in `ImageCard.tsx` for a cleaner, more modern look with smoother hover effects.
    - Modified navigation and header elements in `App.tsx` for better visual hierarchy and responsiveness.
- **Content Updates:**
    - Revised character descriptions in `constants.ts` to be more detailed and descriptive.
    - Updated metadata comments in `constants.ts` for clarity.
- **Technical Adjustments:**
    - Configured `vite.config.ts` with `base: './'` for improved GitHub Pages deployment compatibility and set `build.outDir` to `dist`.
    - Updated `tsconfig.json` `include` paths to match project structure.
    - Added escape key handling in `App.tsx` to close modals.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             padding: 0;
         }
         .bureau-gradient {
-            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
         }
     </style>
 <script type="importmap">
@@ -33,6 +33,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- Vite 엔트리 포인트 -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
