feat: Update tsconfig and index.html for Vite
Refines TypeScript configuration to include specific source files and exclude build configurations. Updates index.html to provide a more descriptive comment for the Vite entry point.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- Vite 엔트리 포인트 -->
+    <!-- Vite 엔트리 포인트: 빌드 시 자동으로 처리됩니다. -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
